--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "sqlite3": "^5.0.2"
   }
